Roll back commit r489362 Patch for HARMONY-1799 "[classlib][swing] JTextPane throws NPE after we set null font."
The test BasicTextPaneUITest.java may crash VM. Will reopen the bug report

git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/trunk@489611 13f79535-47bb-0310-9956-ffa450edef68